2004-08-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* maya.png:
	* default.png: Moved these themes to the gnome-games-extra-data
	package.

2004-06-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* postmodern.svg:
	* mahjongg.schemas.in: Use the upgraded postmodern.svg from 
	Richard Hoelscher and make it the default.

2004-06-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Replace the dialog warning you about the map change
	not taking effect until the next game with one that offers the
	chance of starting a new game immediately.

2004-06-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Remove the explicit shuffle controls and
	only offer shuffle if the player has run out of moves.
	The undo button is now also offered rather than an OK
	button that leaves an unplayable board. Fixes bug
	#139295.

	* solubility.c: Fix the shuffle routine so that the same 
	tiles are reused. Fixes bug #139294.

2004-06-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Make sure the state of the pause menubar button
	is always correct. Fixes bug #143465.

2004-05-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Fix compiler warnings.

2004-04-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c (about_callback): Update credits to make it clear who
	did what.

2004-04-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: 	
	* mahjongg.c: Add Rexford Newbould's new mahjongg layout:
	ziggurat.

2004-04-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* mahjongg.c: Use games_clock_add_seconds and
	games_clock_get_seconds instead of referencing internal variables.

2004-03-17  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/mahjongg.xml: 
	* help/C/figures/mahjongg.png: Correct a link and make the new
	screenshot match the text (by altering both).

2004-03-16 Iain <iain@prettypeople.org>

	* mahjongg.c (shuffle_tiles_callback): Update the moves counter when
	you shuffle.
